bug fixes- title section not align centre on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -150,7 +150,7 @@ p {
 }
 
 @media (max-width:992px) {
-  #title {
+  #title .container-fluid{
     text-align: center;
   }
 
